# BetterGlauco

./: .gitignore  README.md  build.sh  build_files.sh  datadump.json  manage.py  pyproject.toml  requeriments.txt  requieriments.txt  requirements.txt  vercel.json  vercel_build.sh  vercel_build_files copy.sh  vercel_build_files.sh  vercel_build_files_bk.sh
BetterGlauco/: asgi.py  funcoes_auxiliares.py  parametro.py  settings.py  tabelas_formatacao.py  urls.py  views.py  wsgi.py
docs/: Inicio.md  modulo_atualizacao.md  modulo_operacoes.md
invest_alocacao/: apps.py  filtros.py  forms.py  tabela_alocacao.py  urls.py  views.py
invest_alocacao/templates/: alocacao_inicio.html  alocacao_teorica_completa.html  configuracao_inicio.html
invest_atualizacao/: apps.py  cotas_ativo.py  filtros.py  forms.py  tabelas.py  urls.py  views.py
invest_atualizacao/templates/: atualizacao_inicio.html  atualizar_posicao_ativo.html  dividendos.html
invest_operacao/: apps.py  filtros_operacoes.py  forms_operacoes.py  nota_corretagem.py  tabelas.py  urls.py  views.py
invest_operacao/templates/: operacao_historico_ativo.html  operacao_inicio.html  registrar_nota_corretagem.html
investimento/: admin.py  apps.py  bdr.py  brd.py  contextos.py  forms.py  models.py  parametro.py  tabelas.py  urls.py  views.py
investimento/migrations/: 0001_initial.py  0002_alter_ativo_desdobramento_and_more.py  0002_ativo_instituicaofinanceira_posicaodata_perfil_and_more.py  0003_remove_classeativo_perfil.py  0003_rename_extratooperacoes_extratooperacao.py  0004_parametro.py  0004_remove_ativoperfilcaixa_caixa_alocacao.py  0005_parametro_e_mail_api.py  0005_remove_ativoperfilcaixa_alocacao_teorica_valor_currency_and_more.py  0006_remove_ativo_alocacao_caixa_and_more.py  0006_rename_alocacao_teorica_percentual_ativoperfilcaixa_aloc_teor_percent_caixa_and_more.py  0008_caixa_ordem_exibicao.py  (+11 more)
templates/: contato.html  footer_aberto.html  index.html  login.html  logout.html  menu_aberto.html  menu_area-logada.html  modelo_aberto.html  modelo_area-logada.html  modelo_principal.html  sobre.html
(+14 files in other folders)
