[tool.poetry]
name = "-betterglauco"
version = "0.1.0"
description = ""
authors = ["divirjo <worldoftyto@gmail.com>"]
readme = "README.md"
packages = [{include = "_betterglauco"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
django-crispy-forms = "^2.0"
crispy-tailwind = "^0.5.0"
pytz = "^2023.3"
requests = "^2.28.2"
babel = "^2.12.1"
django-money = "^3.0.0"
django-tables2 = "^2.5.3"
psycopg2-binary = "^2.9.6"
protobuf = "^4.22.3"
python-dotenv = "^1.0.0"
django-filter = "^23.5"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
virtualenvs.in-project = true
